# kartbox-v2

./: .gitignore  CMakeLists.txt  GUIA_KARTBOX.html  HISTORICO.md  PINOS.html  PRODUTO_KARTBOX.md  kartbox-telemetry.html  partitions.csv  sdkconfig.defaults  track_editor.html
case/: box.3mf  case v2.scad  case v3_Maior_com furo.scad  case v3_com furo.scad  case v8_Maior_com furo.stl  kartbox_case_v4.stl  kartbox_case_v5.stl  kartbox_case_v6.stl  kartbox_case_v7.stl  kartbox_case_v7_fundo.stl  kartbox_case_v7_tampa_frontal.stl  kartbox_case_v8.stl  kartbox_case_v8_berço.stl  kartbox_case_v8_tampa_frontal.stl
main/: CMakeLists.txt  app_events.c  app_events.h  battery.c  battery.h  ble_telemetry.c  ble_telemetry.h  config.h  display_init.c  display_init.h  font_kartbox_2xl.c  font_kartbox_huge.c  font_kartbox_lg.c  font_kartbox_sm.c  font_kartbox_xl.c  fonts.h  gps.c  gps.h  idf_component.yml  main.c  sd_logger.c  sd_logger.h  settings.c  settings.h  track_manager.c  track_manager.h  ui.c  ui.h  usb_mode.c  usb_mode.h  wifi_export.c  wifi_export.h
sessions_simuladas/: 20260704_143000.csv
